[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://unit/Unit2D.gd" type="Script" id=2]
[ext_resource path="res://unit/PathVisualization.gd" type="Script" id=3]
[ext_resource path="res://unit/navigation.gd" type="Script" id=4]
[ext_resource path="res://unit/Statistics.gd" type="Script" id=5]
[ext_resource path="res://unit/Gathering.gd" type="Script" id=6]
[ext_resource path="res://Unit/Sprite.gd" type="Script" id=7]
[ext_resource path="res://Unit/Combat.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 21.6312

[sub_resource type="CircleShape2D" id=2]
radius = 25.1793

[sub_resource type="CircleShape2D" id=3]
radius = 70.1647

[node name="Unit2D" type="KinematicBody2D"]
input_pickable = true
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 7 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Statistics" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Navigation" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="PathVisualization" type="Node2D" parent="Navigation"]
script = ExtResource( 3 )

[node name="GroundTypeDetector" type="Area2D" parent="Navigation"]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Navigation/GroundTypeDetector"]
shape = SubResource( 2 )

[node name="Gathering" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Gathering"]

[node name="Combat" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Detector" type="Area2D" parent="Combat"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Combat/Detector"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="Combat"]

[connection signal="mouse_entered" from="." to="." method="_on_Unit2D_mouse_entered"]
[connection signal="mouse_entered" from="." to="Sprite" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Unit2D_mouse_exited"]
[connection signal="mouse_exited" from="." to="Sprite" method="_on_mouse_exited"]
[connection signal="died" from="Statistics" to="." method="_on_died"]
[connection signal="body_entered" from="Navigation/GroundTypeDetector" to="Navigation" method="_on_GroundTypeDetector_body_entered"]
[connection signal="body_exited" from="Navigation/GroundTypeDetector" to="Navigation" method="_on_GroundTypeDetector_body_exited"]
[connection signal="timeout" from="Gathering/Timer" to="Gathering" method="_on_Timer_timeout"]
[connection signal="timeout" from="Combat/Timer" to="Combat" method="_on_Timer_timeout"]
